spinnaker-testiam.template
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Parameters":{
      "SpinnakerVPCCIDR":{
         "Description":"CIDR Block for Developer VPC",
         "Type":"String",
         "Default":"10.100.0.0/16",
         "AllowedValues":[
            "10.100.0.0/16"
         ]
      },
      "SpinnakerPublicSubnetCIDR":{
         "Description":"SpinnakerEnv Public Subnet",
         "Type":"String",
         "Default":"10.100.10.0/24",
         "AllowedValues":[
            "10.100.10.0/24"
         ]
      },
      "KeyName":{
         "Description":"Key Pair Name",
         "Type":"AWS::EC2::KeyPair::KeyName"
      },
      "Password":{
         "NoEcho":"true",
         "Type":"String",
         "Description":"spinnaker account password",
         "MinLength":"1",
         "MaxLength":"41",
         "ConstraintDescription":"the password must be between 1 and 41 characters"
      }
   },
   "Mappings":{
      "SpinnakerAMI":{
         "us-east-1":{
            "AMI":"ami-c43d7fae"
         },
         "us-west-1":{
            "AMI":"ami-d32384a0"
         },
         "us-west-2":{
            "AMI":"ami-5e06143f"
         },
         "eu-west-1":{
            "AMI":"ami-3cc8a15c"
         },
         "eu-central-1":{
            "AMI":"ami-9e3528f2"
         },
         "sa-east-1":{
            "AMI":"ami-017efb6d"
         },
         "ap-southeast-1":{
            "AMI":""
         },
         "ap-southeast-2":{
            "AMI":"ami-742f7717"
         },
         "ap-northeast-1":{
            "AMI":"ami-24c00047"
         }
      }
   },
   "Resources":{
      "spinnakeruser":{
         "Description":"User identity spinnaker uses to create AWS resources. Extra?",
         "Type":"AWS::IAM::User",
         "Properties":{
            "ManagedPolicyArns":[
               "arn:aws:iam::aws:policy/PowerUserAccess"
            ],
            "Path":"/",
            "LoginProfile":{
               "Password":{
                  "Ref":"Password"
               }
            },
            "Policies":[
               {
                  "PolicyName":"spinnakerpassrole",
                  "PolicyDocument":{
                     "Version":"2012-10-17",
                     "Statement":[
                        {
                           "Sid":"Stmt1449267121000",
                           "Effect":"Allow",
                           "Action":[
                              "iam:PassRole"
                           ],
                           "Resource":"arn:aws:iam::730329488449:role/BaseIAMRole"
                        }
                     ]
                  }
               }
            ]
         }
      },
      "spinnakerkeys":{
         "Description":"Generate AccessKey for spinnaker",
         "Type":"AWS::IAM::AccessKey",
         "Properties":{
            "UserName":{
               "Ref":"spinnakeruser"
            }
         },
         "DependsOn":"spinnakeruser"
      },
      "spinnakerRole":{
         "Type":"AWS::IAM::Role",
         "Properties":{
            "AssumeRolePolicyDocument":{
               "Version":"2012-10-17",
               "Statement":[
                  {
                     "Effect":"Allow",
                     "Principal":{
                        "Service":[
                           "ec2.amazonaws.com"
                        ]
                     },
                     "Action":[
                        "sts:AssumeRole"
                     ]
                  }
               ]
            },
            "ManagedPolicyArns":[
               "arn:aws:iam::aws:policy/PowerUserAccess"
            ],
            "Path":"/",
            "Policies":[
               {
                  "PolicyName":"spinnakerpassrole",
                  "PolicyDocument":{
                     "Version":"2012-10-17",
                     "Statement":[
                        {
                           "Sid":"Stmt1449267121000",
                           "Effect":"Allow",
                           "Action":[
                              "iam:PassRole"
                           ],
                           "Resource":"arn:aws:iam::730329488449:role/BaseIAMRole"
                        }
                     ]
                  }
               }
            ]
         }
      },
      "spinnakerInstanceProfile":{
         "Type":"AWS::IAM::InstanceProfile",
         "DependsOn":"spinnakerRole",
         "Properties":{
            "Path":"/",
            "Roles":[
               {
                  "Ref":"spinnakerRole"
               }
            ]
         }
      },
      "SpinnakerVPC":{
         "Type":"AWS::EC2::VPC",
         "Properties":{
            "CidrBlock":{
               "Ref":"SpinnakerVPCCIDR"
            },
            "EnableDnsSupport":"true",
            "EnableDnsHostnames":"true",
            "Tags":[
               {
                  "Key":"VPC",
                  "Value":"Spinnaker VPC"
               },
               {
                  "Key":"Name",
                  "Value":"defaultvpc"
               }
            ]
         }
      },
      "SpinnakerInternetGateway":{
         "Type":"AWS::EC2::InternetGateway",
         "DependsOn":"SpinnakerVPC"
      },
      "SpinnakerAttachGateway":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "DependsOn":[
            "SpinnakerVPC",
            "SpinnakerInternetGateway"
         ],
         "Properties":{
            "VpcId":{
               "Ref":"SpinnakerVPC"
            },
            "InternetGatewayId":{
               "Ref":"SpinnakerInternetGateway"
            }
         }
      },
      "SpinnakerPublicSubnet":{
         "Type":"AWS::EC2::Subnet",
         "DependsOn":"SpinnakerAttachGateway",
         "Properties":{
            "VpcId":{
               "Ref":"SpinnakerVPC"
            },
            "CidrBlock":{
               "Ref":"SpinnakerPublicSubnetCIDR"
            },
            "AvailabilityZone":{
               "Fn::Select":[
                  "0",
                  {
                     "Fn::GetAZs":""
                  }
               ]
            },
         "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Join":[
                        ".",
                        [
                           {
                              "Ref":"SpinnakerVPC"
                           },
                           "internal",
                           {
                              "Fn::Select":[
                                 "0",
                                 {
                                    "Fn::GetAZs":""
                                 }
                              ]
                           }
                        ]
                     ]
                  }
               }
            ]
         }
      },
      "SpinnakerPublicRouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "DependsOn":[
            "SpinnakerVPC",
            "SpinnakerAttachGateway"
         ],
         "Properties":{
            "VpcId":{
               "Ref":"SpinnakerVPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"Spinnaker Public Route Table"
               }
            ]
         }
      },
      "SpinnakerPublicRoute":{
         "Type":"AWS::EC2::Route",
         "DependsOn":[
            "SpinnakerPublicRouteTable",
            "SpinnakerAttachGateway"
         ],
         "Properties":{
            "RouteTableId":{
               "Ref":"SpinnakerPublicRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"SpinnakerInternetGateway"
            }
         }
      },
      "SpinnakerPublicSubnetRouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "DependsOn":[
            "SpinnakerPublicRouteTable",
            "SpinnakerPublicSubnet",
            "SpinnakerAttachGateway"
         ],
         "Properties":{
            "SubnetId":{
               "Ref":"SpinnakerPublicSubnet"
            },
            "RouteTableId":{
               "Ref":"SpinnakerPublicRouteTable"
            }
         }
      },
      "SpinnakerWebServerSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "DependsOn":"SpinnakerAttachGateway",
         "Properties":{
            "GroupDescription":"Security Group for Spinnaker Web server",
            "VpcId":{
               "Ref":"SpinnakerVPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"SpinnakerWebServerSecurityGroup"
               },
               {
                  "Key":"InstanceType",
                  "Value":"General"
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"22",
                  "ToPort":"22",
                  "CidrIp":"0.0.0.0/0"
               }
            ]
         }
      },
      
      "SpinnakerWebServer":{
         "Type":"AWS::EC2::Instance",
         "DependsOn":[
            "spinnakerInstanceProfile",
            "SpinnakerPublicSubnet",
            "SpinnakerWebServerSecurityGroup",
            "SpinnakerAttachGateway"
         ],
         "Properties":{
            "KeyName":{
               "Ref":"KeyName"
            },
            "IamInstanceProfile":{
               "Ref":"spinnakerInstanceProfile"
            },
            "ImageId":{
               "Fn::FindInMap":[
                  "SpinnakerAMI",
                  {
                     "Ref":"AWS::Region"
                  },
                  "AMI"
               ]
            },
            "InstanceType":"m4.xlarge",
            "EbsOptimized" : true,
            "NetworkInterfaces":[
               {
                  "DeviceIndex":"0",
                  "AssociatePublicIpAddress":"true",
                  "SubnetId":{
                     "Ref":"SpinnakerPublicSubnet"
                  },
                  "GroupSet":[
                     {
                        "Ref":"SpinnakerWebServerSecurityGroup"
                     }
                  ]
               }
            ],
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"SpinnakerWebServer"
               }
            ]
         }
      }
   },
   "Outputs":{
      "AccessKey":{
         "Value":{
            "Ref":"spinnakerkeys"
         },
         "Description":"AWSAccessKeyId of spinnakeruser"
      },
      "SecretKey":{
         "Value":{
            "Fn::GetAtt":[
               "spinnakerkeys",
               "SecretAccessKey"
            ]
         },
         "Description":"AWSSecretKey of spinnakeruser"
      }
   }
}
